--- a/.verb.md
+++ b/.verb.md
@@ -1,4 +1,6 @@
 # {%= name %} {%= badge("fury") %}
+[![Bower version](https://badge.fury.io/bo/{%= name %}.svg)](http://badge.fury.io/bo/{%= name %})
+[![Build Status](https://travis-ci.org/onokumus/metisadmin.svg)](https://travis-ci.org/onokumus/metisadmin)
 
 > {%= description %}
 
