--- a/.verb.md
+++ b/.verb.md
@@ -1,4 +1,4 @@
-# {%= name %} {%= badge("fury") %} [![Bower version](https://badge.fury.io/bo/{%= name %}.svg)](http://badge.fury.io/bo/{%= name %}) [![Build Status](https://travis-ci.org/onokumus/metisadmin.svg)](https://travis-ci.org/onokumus/metisadmin)
+# {%= name %} {%= badge("fury") %} [![GitHub version](https://badge.fury.io/gh/onokumus%2Fmetisadmin.svg)](http://badge.fury.io/gh/onokumus%2Fmetisadmin) [![Bower version](https://badge.fury.io/bo/{%= name %}.svg)](http://badge.fury.io/bo/{%= name %}) [![Build Status](https://travis-ci.org/onokumus/metisadmin.svg)](https://travis-ci.org/onokumus/metisadmin)
 
 > {%= description %}
 
